<resources>
    <string name="app_name">UserGoDokV1</string>

    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_item1">Item 1</string>
    <string name="title_item2">Item 2</string>
    <string name="title_item3">Item 3</string>
    <string name="title_item4">Item 4</string>
    <string name="github">GitHub</string>

    <string name="click_search_button">Click on the Search Button!</string>

    <string name="custom_layout_with_listview">This is a custom Layout containing a ListView with android:id=\"@android:id/list\"</string>
    <string name="fragment">Fragment</string>
    <string name="activity">Activity</string>
    <string name="fragment_listview">Fragment ListView</string>
    <string name="fragment_scrollview">Fragment ScrollView</string>
    <string name="fragment_viewpager">Fragment ViewPager</string>
    <string name="fragment_viewpager_with_tabs">Fragment ViewPager with Tabs</string>
    <string name="start_activity">Start Activity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="splash_content_description">Splash</string>
    <string name="daftarmenu">MENU</string>
    <string name="profile">Profil</string>
    <string name="myquestion">Pertanyaan Saya</string>
    <string name="favorit">Favorit</string>
    <string name="poin">Poin</string>
    <string name="infokesehatan">Info Kesehatan</string>
    <string name="share">Bagikan</string>
    <string name="more">More</string>
    <string name="aboutmedical">Tentang Medical</string>
    <string name="daftarobat">Daftar Obat</string>
    <string name="dokterjaga">Dokter Jaga</string>
    <string name="drjaga1">Dr. Jaga Pagi</string>
    <string name="drjaga2">Dr. Jaga Siang</string>
    <string name="drjaga3">Dr. Jaga Malam</string>

    <string name="daftarsample">Ini sample deskripsi list di aplikasi medical investmen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="nav_profile">Profil</string>
    <string name="nav_myquestion">Pertanyaan Saya</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_poin">Poin</string>
    <string name="nav_article">Article</string>
    <string name="nav_info_health">Info Kesehatan</string>
    <string name="nav_share">Bagikan</string>
    <string name="nav_more">Lebih lengkap</string>
    <string name="nav_info">Info</string>
    <string name="nav_notification">Notifikasi</string>
    <string name="nav_comment">Berikan Komentar</string>
    <string name="nav_aboutus">Tentang Kami</string>
    <string name="nav_version">Versi V.1.0.1</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profil</item>
        <item>Pertanyaan Saya</item>
        <item>Favorite</item>
        <item>Poin</item>
        <item>Info Kesehatan</item>
        <item>Bagikan</item>

        <item>Info</item>
        <item>Komentar</item>
        <item>Tentang Kita</item>
        <item>Versi</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="arrow_report_news">arrow_report_news</string>
    <string name="like_news">like_news</string>
    <string name="separator_likecomment_news">separator_likecomment_news</string>
    <string name="comment_news">like_news</string>
    <string name="status_image_news">status_image_news</string>

    <string name="about_copyright">Copyright © 2016 by PT. Medical Investment</string>
    <string name="about_link_1">www.godok.com</string>
    <string name="about_link_2">www.godok.com</string>
    <string name="app_version_label">Versi</string>

    <string name="tab_button_padding_top">10</string>
    <string name="tab_button_padding_bottom">10</string>

    <string name="search_hint">Search</string>

</resources>
